--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <html>
 <head>
+<meta content='width=device-width, initial-scale=1' name='viewport'/>
 <title>Sup </title>
 <link href="style.css" rel="stylesheet">
 </head>
 <body background="images/bg.jpg">
-<h1 align="center" valign="middle">HELLO WORLD</h1>
-<hr>
+<div style="background-image: url(images/cover.jpg); padding: 0; height: 100px; margin-top: 0;">
+	<h1 align="center" style="padding: 15px;
+		font: 45px/32px pricedown, serif; color: #ffffff; text-shadow: 0 0 20px rgb(0, 0, 0);">Hello World</h1>
+</div>
+<br>
+
+
+<ul>
+	<li><a href="#home" class="active">Home</a></li>
+	<li><a href="#about">About</a></li>
+	<li><a href="#contact">Contact Us</a></li>
+</ul>
 <div class="dec" id="op">
 	<h3>Just a Dummy Page for testing purposes</h3>
 
 </div>
 <br>
-<footer>
-	<div class="dec" id="op">
-		<h4 id="des">Author</h5>
-		<strong>Adwin Paulji</strong><br>
-		<strong style="color: #808080">Tech Enthusiast</strong>
-	</div>
-</footer>
+<div class="dec" id="op">
+	<h4 id="des">Author</h5>
+	<strong>Adwin Paulji</strong><br>
+	<strong style="color: #808080">Tech Enthusiast</strong>
+</div>
 <footer id="bye">
 	<a href="https://github.com/anubis-tyrant">Github</a><br>
 	Bye bye
