--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
 <title>Sup </title>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet">
 </head>
 <body background="images/bg.jpg">
 <div style="background-image: url(images/cover.jpg); padding: 0; height: 100px; margin-top: 0;">
