--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
 <link href="style.css" rel="stylesheet">
 </head>
 <body background="images/bg.jpg">
-<div style="background-image: url(images/cover.jpg); padding: 0; height: 100px; margin-top: 0;">
+<div style="background-image: url(images/cover.jpg); padding: 0; height: 100px; margin-top: 0; position: relative;">
 	<h1 align="center" style="padding: 15px;
-		font: 45px/32px pricedown, serif; color: #ffffff; text-shadow: 0 0 20px rgb(0, 0, 0);">Hello World</h1>
+		font: 45px/32px pricedown, serif; color: #ffffff; text-shadow: 0 0 20px rgb(0, 0, 0);;">Hello World</h1>
 </div>
-<br>
+
+<ul id="h_nav">
+	<li id="h_nav1">Home</li>
+	<li id="h_nav1">About</li>
+	<li id="h_nav1">Contact</li>
+	<li id="h_nav1">FAQ</li>
+</ul>
 
 
-<ul>
-	<li><a href="#home" class="active">Home</a></li>
-	<li><a href="#about">About</a></li>
-	<li><a href="#contact">Contact Us</a></li>
+<ul id="one">
+	<li id="one"><a href="#home">Home</a></li>
+	<li id="one"><a href="#about">About</a></li>
+	<li id="one"><a href="#contact">Contact Us</a></li>
 </ul>
 <div class="dec" id="op">
 	<h3>Just a Dummy Page for testing purposes</h3>
