--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body background="images/bg.jpg">
 <div style="background-image: url(images/cover.jpg); padding: 0; height: 100px; margin-top: 0; position: relative;">
 	<h1 align="center" style="padding: 15px;
-		font: 45px/32px pricedown, serif; color: #ffffff; text-shadow: 0 0 20px rgb(0, 0, 0);;">Hello World</h1>
+		font: 45px/32px pricedown, serif; color: #ffffff; text-shadow: 0 0 20px rgb(0, 0, 0);;">Hello World22</h1>
 </div>
 
 <ul id="h_nav">
