--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title>Sup </title>
 <link href="style.css" rel="stylesheet">
 </head>
-<body background="images/bg.jpg">
-<div style="background-image: url(images/cover.jpg); padding: 0; height: 100px; margin-top: 0; position: relative;">
-	<h1 align="center" style="padding: 15px;
-		font: 45px/32px pricedown, serif; color: #ffffff; text-shadow: 0 0 20px rgb(0, 0, 0);;">Hello World22</h1>
+<body background="images/bg.jpg" style="background-repeat: no-repeat; background-attachment: fixed;">
+<div style="background-image: url(images/cover.jpg); padding-top: 0px; height: 100px; margin: 0; position: sticky; top: 0;">
+	<h1 align="center" id="rick" style="padding: 15px;
+		font: 45px/32px minecrafter, serif; color: #ffffff; text-shadow: 0 0 20px rgb(0, 0, 0);">Hello World22</h1>
 </div>
 
 <ul id="h_nav">
@@ -22,8 +22,14 @@
 	<li id="one"><a href="#home">Home</a></li>
 	<li id="one"><a href="#about">About</a></li>
 	<li id="one"><a href="#contact">Contact Us</a></li>
+	<li id="one"><a href="#home">Home</a></li>
+	<li id="one"><a href="#about">About</a></li>
+	<li id="one"><a href="#contact">Contact Us</a></li>
+	<li id="one"><a href="#home">Home</a></li>
+	<li id="one"><a href="#about">About</a></li>
+	<li id="one"><a href="#contact">Contact Us</a></li>
 </ul>
-<div class="dec" id="op">
+<div class="dec" id="op" style="margin-top: 100px;">
 	<h3>Just a Dummy Page for testing purposes</h3>
 
 </div>
@@ -33,11 +39,19 @@
 	<strong>Adwin Paulji</strong><br>
 	<strong style="color: #808080">Tech Enthusiast</strong>
 </div>
-<footer id="bye">
-	<a href="https://github.com/anubis-tyrant">Github</a><br>
-	Bye bye
+<br>
+<div class="dec" id="op">
+	<strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</strong><br>
+</div>
+<br>
+<div class="dec" id="op">
+	<strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</strong><br>
+</div>
+<br>
+<div class="dec" id="op">
+	<strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</strong><br>
+</div>
+<br>
 
-
-</footer>
 </body>
 </html>
