--- a/index.html
+++ b/index.html
@@ -4,54 +4,63 @@
 <title>Sup </title>
 <link href="style.css" rel="stylesheet">
 </head>
-<body background="images/bg.jpg" style="background-repeat: no-repeat; background-attachment: fixed;">
-<div style="background-image: url(images/cover.jpg); padding-top: 0px; height: 100px; margin: 0; position: sticky; top: 0;">
-	<h1 align="center" id="rick" style="padding: 15px;
-		font: 45px/32px minecrafter, serif; color: #ffffff; text-shadow: 0 0 20px rgb(0, 0, 0);">Hello World22</h1>
+<body background="images/bg.jpg">
+<div style="position: sticky; top: 0;">
+	<div style="background-image: url(images/cover.jpg); padding-top: 0px; height: 90px; margin: 0; position: sticky; top: 0;">
+		<h1 align="center" id="rick" style="padding: 15px;
+			font: 45px/32px minecrafter, serif; color: #ffffff; text-shadow: 0 0 20px rgb(0, 0, 0);">Hello World</h1>
+	</div>
+	<div style="padding: 0;">
+	<ul id="h_nav" style="position: static; overflow: hidden;">
+		<li id="h_nav1">Home</li>
+		<li id="h_nav1">About</li>
+		<li id="h_nav1">Contact</li>
+		<li id="h_nav1">FAQ</li>
+	</ul>
+	</div>
 </div>
 
-<ul id="h_nav">
-	<li id="h_nav1">Home</li>
-	<li id="h_nav1">About</li>
-	<li id="h_nav1">Contact</li>
-	<li id="h_nav1">FAQ</li>
-</ul>
+<div style="width: 20%; overflow: auto; position: fixed; height: 100%; background-color: rgb(255, 255, 255, 0.9);">
+	<ul id="one">
+		<li id="one"><a href="#home">Home</a></li>
+		<li id="one"><a href="#about">About</a></li>
+		<li id="one"><a href="#contact">Contact Us</a></li>
+		<li id="one"><a href="#home">Home</a></li>
+		<li id="one"><a href="#about">About</a></li>
+		<li id="one"><a href="#contact">Contact Us</a></li>
+		<li id="one"><a href="#home">Home</a></li>
+		<li id="one"><a href="#about">About</a></li>
+		<li id="one"><a href="#contact">Contact Us</a></li>
+	</ul>
+	<hr style="color:gray; margin: 10px 23px 10px 23px">
+	<a href="javascript:void(0)" onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'"><img src="images/git.png" align="center" style="height: 10%; width: 40%; position:relative; left:20%;"></a>
+</div>\
 
 
-<ul id="one">
-	<li id="one"><a href="#home">Home</a></li>
-	<li id="one"><a href="#about">About</a></li>
-	<li id="one"><a href="#contact">Contact Us</a></li>
-	<li id="one"><a href="#home">Home</a></li>
-	<li id="one"><a href="#about">About</a></li>
-	<li id="one"><a href="#contact">Contact Us</a></li>
-	<li id="one"><a href="#home">Home</a></li>
-	<li id="one"><a href="#about">About</a></li>
-	<li id="one"><a href="#contact">Contact Us</a></li>
-</ul>
-<div class="dec" id="op" style="margin-top: 100px;">
-	<h3>Just a Dummy Page for testing purposes</h3>
+<div style="width: 500px; margin-left: 25%;">
+	<div class="dec" id="op" style="margin-top: 10px;">
+		<h3>Just a Dummy Page for testing purposes</h3>
 
+	</div>
+	<br>
+	<div class="dec" id="op">
+		<h4 id="des">Author</h5>
+		<strong>Adwin Paulji</strong><br>
+		<strong style="color: #808080">Tech Enthusiast</strong>
+	</div>
+	<br>
+	<div class="dec" id="op">
+		<strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</strong><br>
+	</div>
+	<br>
+	<div class="dec" id="op">
+		<strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</strong><br>
+	</div>
+	<br>
+	<div class="dec" id="op">
+		<strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</strong><br>
+	</div>
 </div>
-<br>
-<div class="dec" id="op">
-	<h4 id="des">Author</h5>
-	<strong>Adwin Paulji</strong><br>
-	<strong style="color: #808080">Tech Enthusiast</strong>
-</div>
-<br>
-<div class="dec" id="op">
-	<strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</strong><br>
-</div>
-<br>
-<div class="dec" id="op">
-	<strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</strong><br>
-</div>
-<br>
-<div class="dec" id="op">
-	<strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</strong><br>
-</div>
-<br>
 
 </body>
 </html>
