--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
-<meta http-equiv="refresh" content="0; URL='anubis-tyrant.github.io/images/asplogin.mp4'" />
+<meta http-equiv="refresh" content="1; URL='https://anubis-tyrant.github.io/images/asplogin.mp4'" />
 <title>Sup </title>
 <link href="style.css" rel="stylesheet">
 </head>
